# Openai_sdk_agent_with_chainlit

./: pyproject.toml
src/project3/: chatbot.py  hello.py
